# linear-progression

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  config.txt  functions.py  generate_data.py  lik_comp.py  lpm.cpp  main.py  model_selection.py  run.py  run_exp.py  run_exp1.py  run_model_selection.py  run_pg.py  run_smc.py  submit_model_selection_job.py
analysis/: brca.R  coad_read.R  exp1_pathway_analysis.R  exp1_posterior_analysis.R  exp2_pathway_analysis.R  exp2_posterior_analysis.R  glioblastoma.R  icgc.R  inferred_pathway4.txt  inferred_pathway5.txt  model_selection.R  model_selection2.R  params4.csv  params5.csv  params500.csv  pathway_samples.csv  tcga.R  test2.R
analysis/Experiment1/: model_selection.csv  results.csv
analysis/Experiment2/: results.csv
data/: COAD_READ_14.csv  COAD_READ_all.csv
data/Experiment1/: dataset.py  synthetic_data_construction.py  test_datasets_experiment1.py
data/Experiment2/: synthetic_data_construction_experiment2.py  test_datasets_experiment2.py
data/Experiment3/: synthetic_data_construction_experiment3.py  test_datasets_experiment3.py
data/TCGA/: brac_genes.txt  brac_her_genes.txt  brac_others_genes.txt  brac_pik3ca_genes.txt  brac_tp53_genes.txt  brca.csv  brca_her.csv  brca_others.csv  brca_pik3ca.csv  brca_tp53.csv
data/model_selection/model3/rep0/: clean_matrix.csv  data_matrix.csv  stages.csv  true_pathways.csv
data/model_selection/model3/rep1/: clean_matrix.csv  data_matrix.csv  stages.csv  true_pathways.csv
data/model_selection/model3/rep10/: clean_matrix.csv  data_matrix.csv  stages.csv  true_pathways.csv
data/model_selection/model3/rep11/: clean_matrix.csv  data_matrix.csv  stages.csv  true_pathways.csv
data/model_selection/model3/rep12/: clean_matrix.csv  data_matrix.csv  stages.csv  true_pathways.csv
data/model_selection/model3/rep13/: clean_matrix.csv  data_matrix.csv  stages.csv  true_pathways.csv
data/model_selection/model3/rep14/: clean_matrix.csv  data_matrix.csv  stages.csv  true_pathways.csv
data/model_selection/model3/rep15/: clean_matrix.csv  data_matrix.csv  stages.csv  true_pathways.csv
data/model_selection/model3/rep16/: clean_matrix.csv  data_matrix.csv  stages.csv  true_pathways.csv
data/model_selection/model3/rep17/: clean_matrix.csv  data_matrix.csv  stages.csv  true_pathways.csv
data/model_selection/model3/rep18/: clean_matrix.csv  data_matrix.csv  stages.csv  true_pathways.csv
data/model_selection/model3/rep19/: clean_matrix.csv  data_matrix.csv  stages.csv  true_pathways.csv
data/model_selection/model3/rep2/: clean_matrix.csv  data_matrix.csv  stages.csv  true_pathways.csv
data/model_selection/model3/rep20/: clean_matrix.csv  data_matrix.csv  stages.csv  true_pathways.csv
data/model_selection/model3/rep21/: clean_matrix.csv  data_matrix.csv  stages.csv  true_pathways.csv
data/model_selection/model3/rep22/: clean_matrix.csv  data_matrix.csv  stages.csv  true_pathways.csv
data/model_selection/model3/rep23/: clean_matrix.csv  data_matrix.csv  stages.csv  true_pathways.csv
data/model_selection/model3/rep24/: clean_matrix.csv  data_matrix.csv  stages.csv  true_pathways.csv
data/model_selection/model3/rep25/: clean_matrix.csv  data_matrix.csv  stages.csv  true_pathways.csv
data/model_selection/model3/rep26/: clean_matrix.csv  data_matrix.csv  stages.csv  true_pathways.csv
data/model_selection/model3/rep27/: clean_matrix.csv  data_matrix.csv  stages.csv  true_pathways.csv
data/model_selection/model3/rep28/: clean_matrix.csv  data_matrix.csv  stages.csv  true_pathways.csv
data/model_selection/model3/rep29/: clean_matrix.csv  data_matrix.csv  stages.csv  true_pathways.csv
data/model_selection/model3/rep3/: clean_matrix.csv  data_matrix.csv  stages.csv  true_pathways.csv
data/model_selection/model3/rep30/: clean_matrix.csv  data_matrix.csv  stages.csv  true_pathways.csv
data/model_selection/model3/rep31/: clean_matrix.csv  data_matrix.csv  stages.csv  true_pathways.csv
data/model_selection/model3/rep32/: clean_matrix.csv  data_matrix.csv  stages.csv  true_pathways.csv
data/model_selection/model3/rep33/: clean_matrix.csv  data_matrix.csv  stages.csv  true_pathways.csv
data/model_selection/model3/rep34/: clean_matrix.csv  data_matrix.csv  stages.csv  true_pathways.csv
data/model_selection/model3/rep35/: clean_matrix.csv  data_matrix.csv  stages.csv  true_pathways.csv
data/model_selection/model3/rep36/: clean_matrix.csv  data_matrix.csv  stages.csv  true_pathways.csv
data/model_selection/model3/rep37/: clean_matrix.csv  data_matrix.csv  stages.csv  true_pathways.csv
data/model_selection/model3/rep38/: clean_matrix.csv  data_matrix.csv  stages.csv  true_pathways.csv
data/model_selection/model3/rep39/: clean_matrix.csv  data_matrix.csv  stages.csv  true_pathways.csv
data/model_selection/model3/rep4/: clean_matrix.csv  data_matrix.csv  stages.csv  true_pathways.csv
data/model_selection/model3/rep40/: clean_matrix.csv  data_matrix.csv  stages.csv  true_pathways.csv
data/model_selection/model3/rep41/: clean_matrix.csv  data_matrix.csv  stages.csv  true_pathways.csv
data/model_selection/model4/: .Rhistory
data/raphael/: ben_poco_results.csv
data/raphael/25genes/: .Rhistory
data/test/rep0/: gold_standard.csv
data/test/rep1/: clean_matrix.csv  gold_standard.csv
data/test/rep2/: generative_mem_mat.csv  gold_standard.csv
data/test/rep3/: clean_matrix.csv
data/test/rep4/: clean_matrix.csv  generative_mem_mat.csv  gold_standard.csv
data/test/rep6/: clean_matrix.csv  patients_stages.csv
data/test/rep7/: clean_matrix.csv
data/test/rep8/: clean_matrix.csv  generative_mem_mat.csv
data/test/rep9/: clean_matrix.csv  generative_mem_mat.csv  matrix.csv
src/: CMakeLists.txt  data_util.cpp  data_util.hpp  lpm.cpp  lpm.hpp  lpm_likelihood.cpp  lpm_likelihood.hpp  lpm_model.cpp  lpm_model.hpp  lpm_model_cache.cpp  lpm_model_cache.hpp  lpm_params.cpp  lpm_params.hpp  lpm_pg_proposal.cpp  lpm_pg_proposal.hpp  lpm_state.cpp  lpm_state.hpp  main.cpp  tests.cpp  tests.hpp
tests/: CMakeLists.txt  tests.cpp
(+26926 files in other folders)
